fixed input button align in form aligned

--- a/django_slick_admin/sass/components/_forms.sass
+++ b/django_slick_admin/sass/components/_forms.sass
@@ -90,6 +90,8 @@ form
     border-radius: 0
     margin-bottom: 0
 
+  .aligned .form-row input
+    margin-bottom: 0 !important
 
   .module
     background-color: transparent
